# Vehicle-Parking-Management-system

./: README.md
Backend/: AUTHENTICATION_README.md  DATABASE_SETUP.md  README.md  app.py  config.py  init_db.py  pyproject.toml  requirements.txt
Backend/exports/: parking_history_deepesh_20250731_025617.csv
Backend/instance/: parking_app.db
Backend/jobs/: __init__.py  celery_app.py  user_jobs.py
Backend/models/: README.md  __init__.py  db_utils.py  parking_lot.py  parking_spot.py  reservation.py  user.py
Backend/routes/: __init__.py  admin_routes.py  auth.py  user_routes.py
Backend/schemas/: __init__.py  base.py  parking_lot.py  parking_spot.py  reservation.py  user.py
Backend/utils/: __init__.py  cache_manager.py  csv_generator.py  error_handlers.py  notification.py  report_generator.py  validation_utils.py
Frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
Frontend/src/: App.vue  main.js
Frontend/src/assets/: main.css
Frontend/src/components/: example.vue
Frontend/src/components/admin/: CreateParkingLotModal.vue  EditParkingLotModal.vue  ParkingLotDetailsModal.vue
Frontend/src/components/auth/: LoginView.vue  RegisterView.vue
Frontend/src/components/navbars/: navbar.vue
Frontend/src/components/user/: BookingModal.vue  ReleaseModal.vue  (+1 more)
Frontend/src/router/: index.js
Frontend/src/services/: apiservice.js
Frontend/src/stores/: auth.js
Frontend/src/views/: HomeView.vue
Frontend/vue-project/: index.html  package.json  pnpm-lock.yaml
Frontend/vue-project/src/: App.vue  main.ts
docs/: PROJECT-REPORT.md
(+22 files in other folders)
