[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.11.7",
    "flask-jwt-extended>=4.6.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.0",
    "flask-cors>=6.0.1",
    "dotenv>=0.9.9",
    "black>=25.1.0",
]
