[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.11.7",
    "flask-jwt-extended>=4.6.0",
    "pyjwt==2.9.0",
    "email-validator>=2.1.0",
    "flask-cors>=6.0.1",
    "dotenv>=0.9.9",
    "black>=25.1.0",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "flask-mail>=0.10.0",
    "matplotlib>=3.10.3",
    "crontab>=1.0.5",
    "seaborn>=0.13.2",
]
